# HomeAutomation_v2

HomeAutomation/: CMakeLists.txt  HomeAutomation.c  check.sh  dht11.c  dht11.h  dht11_2.cpp  dht_example.c  uart_server.py  uart_server_2.py
HomeAutomation/static/: styles.css.txt
HomeAutomation/templates/: index.html
